# UPWORK-Data-Engineer-Dutch-Marketing-Agency

./: .gitignore  Makefile  README.md  dagster.yaml  package.json  pyproject.toml  run_all_scrapers_parallel.sh
.tmp_dagster_home_pqpi3rgc/history/: runs.db
.tmp_dagster_home_pqpi3rgc/history/runs/: .db  index.db
.tmp_dagster_home_pqpi3rgc/schedules/: schedules.db
prisma/: schema.prisma
scripts/: discover_sitemap.py
staffing_agency_scraper/: __init__.py  definitions.py  resources.py
staffing_agency_scraper/models/: __init__.py  agency.py
staffing_agency_scraper/scraping/: __init__.py  base.py  definitions.py  utils.py
staffing_agency_scraper/scraping/agencies/: __init__.py
staffing_agency_scraper/scraping/agencies/adecco/: README.md  __init__.py  assets.py  definitions.py
staffing_agency_scraper/scraping/agencies/asa_talent/: __init__.py  assets.py  definitions.py
staffing_agency_scraper/scraping/agencies/brunel/: __init__.py  assets.py  definitions.py
staffing_agency_scraper/scraping/agencies/covebo/: __init__.py  assets.py  definitions.py
staffing_agency_scraper/scraping/agencies/hays/: __init__.py  assets.py  definitions.py
staffing_agency_scraper/scraping/agencies/maandag/: __init__.py  assets.py  definitions.py
staffing_agency_scraper/scraping/agencies/manpower/: __init__.py  assets.py  definitions.py
staffing_agency_scraper/scraping/agencies/michael_page/: __init__.py  assets.py  definitions.py
staffing_agency_scraper/scraping/agencies/olympia/: __init__.py  assets.py  definitions.py
staffing_agency_scraper/scraping/agencies/randstad/: __init__.py  assets.py  definitions.py
staffing_agency_scraper/scraping/agencies/start_people/: __init__.py  assets.py  definitions.py
staffing_agency_scraper/scraping/agencies/tempo_team/: __init__.py  assets.py  (+1 more)
supabase/: config.toml
tests/: __init__.py  test_models.py  test_normalize.py  test_parse.py
(+9 files in other folders)
